# zeroband

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: cpu_tests.yaml
configs/: 14M.toml  cpu.toml  debug.toml
src/zeroband/: config.py  data.py  logger.py  lr_scheduler.py  model.py  optim.py  semi_sync.py  train.py  utils.py
sweeps/: run.sh
sweeps/14M/: bs-256-steps-22k.yaml  bs-256-steps-2k.yaml
tests/: test_forward.py
