[project]
name = "zeroband"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sami Jaghouar", email = "sami.jaghouar@hotmail.fr" }
]
requires-python = ">=3.10.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
